Upgrading to JPA 3.2 and Hibernate 7